--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ header {
   background-position: center;
   position: fixed;
   top: 0;
-  /left: 40px;
+  left: 40px;
   z-index: 1000;
   margin-right: 20px;
 }
